--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.36.4",
+    "mongodb": "^7.0.0",
+    "moongose": "^1.0.0",
     "next": "16.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
