--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "moongose": "^1.0.0",
     "next": "16.1.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "svix": "^1.82.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
