--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.4",
+    "@imagekit/next": "^2.1.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "imagekit": "^6.0.0",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
     "moongose": "^1.0.0",
