--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^7.0.0",
     "moongose": "^1.0.0",
     "next": "16.1.0",
+    "paystack": "^2.0.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "svix": "^1.82.0",
