--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
+    "i18next-resources-to-backend": "^1.2.1",
     "imagekit": "^6.0.0",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
@@ -25,6 +29,7 @@
     "paystack": "^2.0.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-i18next": "^16.5.0",
     "svix": "^1.82.0",
     "tailwind-merge": "^3.4.0"
   },
