--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.25.0",
     "i18next": "^25.7.3",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
@@ -31,6 +32,7 @@
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
     "moongose": "^1.0.0",
+    "motion": "^12.25.0",
     "next": "16.1.0",
     "next-themes": "^0.4.6",
     "paystack": "^2.0.1",
@@ -38,6 +40,7 @@
     "react-dom": "19.2.3",
     "react-i18next": "^16.5.0",
     "react-quill-new": "^3.7.0",
+    "rough-notation": "^0.5.1",
     "sonner": "^2.0.7",
     "svix": "^1.82.0",
     "tailwind-merge": "^3.4.0"
