--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "rough-notation": "^0.5.1",
     "sonner": "^2.0.7",
     "svix": "^1.82.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
