--- a/package.json
+++ b/package.json
@@ -32,14 +32,16 @@
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
     "moongose": "^1.0.0",
-    "motion": "^12.25.0",
+    "motion": "^12.33.0",
     "next": "16.1.0",
     "next-themes": "^0.4.6",
     "paystack": "^2.0.1",
     "react": "19.2.3",
+    "react-confetti": "^6.4.0",
     "react-dom": "19.2.3",
     "react-i18next": "^16.5.0",
     "react-quill-new": "^3.7.0",
+    "react-use": "^17.6.0",
     "rough-notation": "^0.5.1",
     "sonner": "^2.0.7",
     "svix": "^1.82.0",
