--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "19.2.3",
     "react-confetti": "^6.4.0",
     "react-dom": "19.2.3",
+    "react-floating-whatsapp": "^5.0.8",
     "react-i18next": "^16.5.0",
     "react-quill-new": "^3.7.0",
     "react-use": "^17.6.0",
