--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "16.1.0",
     "next-themes": "^0.4.6",
     "paystack": "^2.0.1",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-confetti": "^6.4.0",
     "react-dom": "19.2.3",
